--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 
     <body>
         <div class="caixa-principal">
-            <h1>Você decide o futuro da IA</h1>
+            <h1>A importancia da IA no meio empresarial</h1>
             <div class="caixa-perguntas"></div>
             <div class="caixa-alternativas"></div>
             <div class="caixa-resultado">
                 <p class="texto-resultado"></p>
+                <button class="novamente-btn">jogar novamente</button>
             </div>
         </div>
-        <script src="main.js"></script>
+        <script type="module" src="js/aleatorio.js"></script>
+        <script type="module" src="js/perguntas.js"></script>
+        <script type="module" src="js/main.js"></script>
     </body>
 
 </body>
